--- a/src/sass/detail.scss
+++ b/src/sass/detail.scss
@@ -2,6 +2,10 @@
 $width:1200px;
 $fontsize:14px;
 $headernavheight:35px;
+body {
+    background: #fff;
+}
+
 .content {
     width: 1200px;
     margin: 0 auto;
@@ -23,6 +27,7 @@ $headernavheight:35px;
             width: 1160px;
             margin: 0 auto;
             overflow: hidden;
+            float: left;
             .auto_biaoti {
                 width: 100%;
                 height: 40px;
@@ -44,42 +49,158 @@ $headernavheight:35px;
                     }
                 }
             }
-            .auto_left {
-                width: 400px;
-                height: auto;
-                overflow: hidden;
+            .wrap {
+                position: relative;
                 float: left;
                 margin-left: 10px;
-                .fangda {
-                    width: 398px;
-                    height: 398px;
-                    position: relative;
-                    overflow: hidden;
-                    float: left;
-                    background: pink;
+                #spic {
+                    width: 400px;
+                    height: 400px;
+                    img {
+                        width: 400px;
+                        height: 400px;
+                    }
+                    #sf {
+                        width: 50px;
+                        height: 50px;
+                        background: #cccccc;
+                        opacity: 0.3;
+                        position: absolute;
+                        left: 0px;
+                        top: 0px;
+                        visibility: hidden;
+                    }
                 }
-                .auto_xiao {
-                    position: relative;
-                    height: 82px;
-                    margin-top: 5px;
-                    background-color: #fff;
-                    padding: 6px 5px;
-                    width: 390px;
+                #bf {
+                    width: 400px;
+                    height: 500px;
+                    border: 1px solid #000;
+                    overflow: hidden;
+                    position: absolute;
+                    left: 410px;
+                    visibility: hidden;
+                    z-index: 10;
+                    img {
+                        position: absolute;
+                        left: 0px;
+                        top: 0px;
+                        width: 800px;
+                        height: 800px;
+                    }
+                }
+                #ulist {
+                    position: absolute;
+                    left: 0px;
+                    top: 430px;
+                    width: 402px;
+                    height: 56px;
+                    overflow: hidden;
+                    a {
+                        float: left;
+                        width: 10px;
+                        height: 54px;
+                        border: 1px solid #ccc;
+                        text-decoration: none;
+                        line-height: 56px;
+                        text-align: center;
+                        background: #fff;
+                    }
+                    #list {
+                        float: left;
+                        margin-left: 18px;
+                        width: 372px;
+                        position: relative;
+                        ul {
+                            list-style: none;
+                            float: left;
+                            position: absolute;
+                            left: 0px;
+                            top: 0px;
+                            li {
+                                float: left;
+                                width: 56px;
+                                height: 56px;
+                                padding-right: 6px;
+                                img {
+                                    width: 52px;
+                                    height: 52px;
+                                    border: 1px solid #ccc;
+                                }
+                            }
+                        }
+                    }
+                    #right {
+                        position: absolute;
+                        right: 0px;
+                        top: 0px;
+                        color: #333;
+                    }
+                    #left {
+                        position: absolute;
+                        left: 0px;
+                        top: 0px;
+                        z-index: 2;
+                        color: #fff;
+                    }
+                }
+                .goodsinfo {
+                    margin: 100px 0 0 100px;
+                }
+                .goodsinfo-img {
+                    width: 200px;
+                    height: 200px;
+                    float: left;
+                    img {
+                        width: 200px;
+                        height: 200px;
+                    }
+                }
+                .goodsinfo-word {
                     overflow: hidden;
                     float: left;
-                    .auto_xiao_tu {
-                        height: 82px;
-                        width: 360px;
-                        overflow: hidden;
-                        margin-left: 10px;
-                        float: left;
-                        li {
-                            height: 82px;
-                            width: 88px;
-                            overflow: hidden;
+                    .p-name {
+                        width: 350px;
+                        height: 50px;
+                        margin-left: 50px;
+                        margin-top: 20px;
+                        .loadtitle {
+                            font: 16px "微软雅黑";
+                            color: #666666;
+                        }
+                    }
+                    .p-price {
+                        margin-left: 50px;
+                        margin-top: 10px;
+                        width: 300px;
+                        height: 50px;
+                        background: rgba(183, 183, 183, 0.4);
+                        line-height: 50px;
+                    }
+                    .p-btn {
+                        margin-top: 20px;
+                        input {
+                            display: inline-block;
+                            width: 50px;
+                            height: 46px;
+                            font-size: 20px;
+                            font-family: "微软雅黑";
+                            color: black;
+                            margin-left: 50px;
+                            border: 1px solid gray;
                             float: left;
+                        }
+                        a {
+                            display: block;
+                            width: 100px;
+                            height: 50px;
+                            background-color: red;
+                            font-size: 16px;
+                            font-family: "微软雅黑";
+                            color: white;
+                            line-height: 50px;
                             text-align: center;
-                            background: lightblue;
+                            float: left;
+                            margin-left: 10px;
                         }
                     }
                 }
@@ -93,6 +214,98 @@ $headernavheight:35px;
                     overflow: hidden;
                     z-index: 10;
                     background: plum;
+                    display: none;
+                }
+            }
+            .auto_right {
+                margin-top: 70px;
+                width: 225px;
+                height: auto;
+                display: block;
+                position: absolute;
+                top: 0px;
+                right: 10px;
+                float: right;
+                background: #fff;
+                border: 1px solid #e8e8e8;
+                li {
+                    min-height: 30px;
+                    line-height: 22px;
+                    list-style: none;
+                    float: left;
+                }
+                h3 {
+                    width: 225px;
+                    height: 30px;
+                    border-bottom: 1px solid #e8e8e8;
+                    line-height: 30px;
+                    padding: 0 10px;
+                }
+                ul {
+                    width: 225px;
+                    clear: both;
+                    padding: 10px 0;
+                    overflow: hidden;
+                    box-sizing: border-box;
+                    padding: 0;
+                    .shang {
+                        width: 225px;
+                        height: 120px;
+                        text-align: left;
+                        border-bottom: 1px solid #e8e8e8;
+                        .pj {
+                            width: 225px;
+                            height: 120px;
+                            clear: both;
+                            text-align: left;
+                            li {
+                                float: left;
+                                height: 26px;
+                                line-height: 26px;
+                                text-align: left;
+                                margin-left: 10px;
+                                .iconc {
+                                    color: orange;
+                                }
+                                span {
+                                    margin-left: 10px;
+                                    color: #cc0000;
+                                }
+                            }
+                        }
+                    }
+                    .zhong {
+                        text-align: center;
+                        width: 100%;
+                        margin-top: 10px;
+                        img {
+                            width: 160px;
+                            height: 80px;
+                        }
+                    }
+                    .left {
+                        width: 70px;
+                        text-align: right;
+                    }
+                    .right {
+                        width: 155px;
+                        text-align: left;
+                        word-wrap: break-word;
+                    }
+                    .phone {
+                        color: #fe8500;
+                        font-size: 16px;
+                    }
+                    .xia {
+                        width: 225px;
+                        text-align: center;
+                        span {
+                            color: #cc0000;
+                        }
+                        .l2 {
+                            margin-left: 10px;
+                        }
+                    }
                 }
             }
         }
