--- a/src/sass/cart.scss
+++ b/src/sass/cart.scss
@@ -2,6 +2,17 @@
 $width:1200px;
 $fontsize:14px;
 $margin:10px;
+body {
+    background: #fafafa;
+}
+
+.class {
+    clear: both;
+    font-size: 0;
+    line-height: 0;
+    height: 0;
+}
+
 .header {
     width: $width;
     height: 110px;
@@ -118,6 +129,217 @@ $margin:10px;
                 height: 35px;
                 line-height: 35px;
                 font-size: 16px;
+            }
+        }
+        .item-list {
+            width: 1200px;
+            margin: 10px auto;
+            border: 1px solid #E8E8E8;
+            position: relative;
+            .goods-item {
+                .dong {
+                    width: 100%;
+                    text-align: left;
+                    height: 24px;
+                    line-height: 24px;
+                    font-size: 12px;
+                    margin-top: 10px;
+                    margin-left: 20px;
+                    padding-left: 5px;
+                    margin-bottom: 10px;
+                }
+                .goods-info {
+                    width: 1190px;
+                    padding: 0 0 10px;
+                    margin: auto;
+                    .dange {
+                        width: 1158px;
+                        margin: 0 auto;
+                        min-height: 110px;
+                        background-color: #fafafa;
+                        border-top: 1px solid #e8e8e8;
+                        padding-top: 20px;
+                        .b-checkbox {
+                            padding-top: 20px;
+                            float: left;
+                            margin: 0 5px;
+                        }
+                        .b-goods {
+                            .goods-name {
+                                .goods-pic {
+                                    width: 66px;
+                                    margin-left: 30px;
+                                    float: left;
+                                    img {
+                                        width: 64px;
+                                        height: 64px;
+                                        border: 1px solid #fff;
+                                    }
+                                }
+                                .goods-msg {
+                                    margin-left: 10px;
+                                    line-height: 20px;
+                                    width: 350px;
+                                    float: left;
+                                    overflow: hidden;
+                                    .goods-d-info {
+                                        width: 100%;
+                                        text-align: left;
+                                        line-height: 16px;
+                                        margin-bottom: 10px;
+                                    }
+                                    .goods-ex {
+                                        width: 180px;
+                                        white-space: nowrap;
+                                        overflow: hidden;
+                                        text-overflow: ellipsis;
+                                    }
+                                }
+                            }
+                        }
+                        .b-price {
+                            width: 150px;
+                            float: left;
+                            margin-left: 10px;
+                            text-align: center;
+                            strong {
+                                font-family: FZLTHJW--圆简体;
+                            }
+                        }
+                        .b-quantity {
+                            width: 120px;
+                            float: left;
+                            margin-left: 10px;
+                            text-align: center;
+                            .quantity-form {
+                                .quantity-down,
+                                .quantity-add {
+                                    cursor: pointer;
+                                    border: 1px solid #ece9e9;
+                                    height: 28px;
+                                    line-height: 28px;
+                                    width: 28px;
+                                    text-align: center;
+                                    color: #666;
+                                    margin: 0;
+                                    padding: 0 2px;
+                                    background: #fff;
+                                    outline: none;
+                                    float: left;
+                                }
+                                input {
+                                    border: 1px solid #ece9e9;
+                                    height: 26px;
+                                    line-height: 26px;
+                                    width: 38px;
+                                    text-align: center;
+                                    color: #666;
+                                    margin: 0;
+                                    padding: 0 2px;
+                                    background: #fff;
+                                    outline: none;
+                                    float: left;
+                                }
+                            }
+                            .quantity-text {
+                                text-align: center;
+                                text-indent: 0;
+                                min-height: 30px;
+                                line-height: 20px;
+                                width: 98px;
+                                margin-top: 35px;
+                            }
+                        }
+                        .b-sum {
+                            width: 120px;
+                            float: left;
+                            margin-left: 10px;
+                            text-align: center;
+                        }
+                        .b-action {
+                            width: 100px;
+                            display: block;
+                            text-align: center;
+                            margin-left: 30px;
+                            position: relative;
+                            float: left;
+                        }
+                    }
+                }
+            }
+        }
+        #cart-floatbar {
+            margin: auto;
+            bottom: 0;
+            height: 57px;
+            margin-top: 20px;
+            background: #e8e8e8;
+            .left {
+                float: left;
+                width: 300px;
+                line-height: 38px;
+                margin-top: 12px;
+                margin-left: 20px;
+                .select-all {
+                    display: inline-block;
+                    .cart-checkbox {
+                        display: inline-block;
+                        input {
+                            vertical-align: middle;
+                        }
+                    }
+                }
+                .operation {
+                    display: inline-block;
+                    width: 200px;
+                    margin-left: 30px;
+                }
+            }
+            .zhong {
+                float: left;
+                width: 300px;
+                line-height: 38px;
+                margin-top: 12px;
+                margin-left: 20px;
+                .jiesuan {
+                    font-size: 15px;
+                }
+            }
+            .right {
+                float: right;
+                line-height: 38px;
+                text-align: right;
+                .toolbar-right {
+                    margin: 8px 10px 0 0;
+                    float: left;
+                    .amount-sum {
+                        float: left;
+                        em {
+                            font-size: 18px;
+                            color: #cc0000;
+                        }
+                    }
+                    .price-sum {
+                        float: left;
+                        .totalprice {
+                            font-size: 18px;
+                            color: #cc0000;
+                        }
+                    }
+                    .btn {
+                        float: right;
+                        span {
+                            width: 100px;
+                            display: block;
+                            height: 30px;
+                            line-height: 30px;
+                            text-align: center;
+                            font-size: 18px;
+                            color: #fff;
+                            background-color: #cc0000;
+                        }
+                    }
+                }
             }
         }
     }
