--- a/src/sass/registry.scss
+++ b/src/sass/registry.scss
@@ -12,23 +12,25 @@ $headernavheight:35px;
         height: 45px;
         line-height: 45px;
         overflow: hidden;
-        background: #fafafa;
+        background: #f5f5f5;
         .mytab {
             width: 300px;
             margin: 0;
+            height: 42px;
             padding: 3px 0px 0px 0px;
             overflow: hidden;
             .normal {
-                cursor: pointer;
                 font-size: 14px;
                 text-align: center;
                 font-weight: bold;
                 float: left;
                 width: 140px;
-                height: 35px;
-                padding-bottom: 7px;
+                height: 45px;
+                line-height: 45px;
+                background: #f5f5f5;
+                border: 0;
             }
-            .normal:hover {
+            .active {
                 background-color: #FFF;
                 border: 1px solid #e8e8e8;
                 border-top: 2px solid #2daae4;
@@ -38,7 +40,8 @@ $headernavheight:35px;
                 color: #2daae4;
                 float: left;
                 width: 140px;
-                height: 35px;
+                height: 42px;
+                line-height: 42px;
             }
         }
     }
